Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Coursera-html-course</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">project</h2>
       <a href="https://github.com/scientistkriptoja/coursera-html-course" class="btn">View on GitHub</a>
       <a href="https://github.com/scientistkriptoja/coursera-html-course/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/scientistkriptoja/coursera-html-course/tarball/master" class="btn">Download .tar.gz</a>
