--- a/Pruebas/structureexample.html
+++ b/Pruebas/structureexample.html
@@ -3,6 +3,20 @@
 <HEAD>
 	<META CHARSET='UTF-8'>
 	<TITLE>EJEMPLO DE ESTRUCTURA BÁSICA</TITLE>
+	<header>Header of the page</header>
+	<h1>Main H1 content<nav>www.indra.es</nav></h1>
+	<section>
+		<article>articulo 1</article>
+		<article>articulo2</article>
+		<article>articulo3</article>
+	</section>
+	<section>
+		<article>articulo4</article>
+		<article>articulo5</article>
+		<article>articulo6</article>
+	</section>
+	<aside>esto es un aside</aside>
+	<footer>y esto es el footer: copyright</footer>
 	<P>Y ESTO ES UN PARAGRAF DE EJEMPLO</P>
 </HEAD>
 </HTML>
