--- a/Pruebas/structureexample.html
+++ b/Pruebas/structureexample.html
@@ -15,6 +15,16 @@
 		<article>articulo5</article>
 		<article>articulo6</article>
 	</section>
+	<div>
+		<ul>
+			<li>Pimer elemento de lista no ordenada</li>
+			<li>segundo elemento de lista no ordenada</li>
+			<ol>
+				<li>Primer elemento de lista ordenada</li>
+				<li>Segundo elemento de lista ordenada</li>
+			</ol>
+		</ul>
+	</div>
 	<aside>esto es un aside</aside>
 	<footer>y esto es el footer: copyright</footer>
 	<P>Y ESTO ES UN PARAGRAF DE EJEMPLO</P>
