--- a/Pruebas/structureexample.html
+++ b/Pruebas/structureexample.html
@@ -28,5 +28,8 @@
 	<aside>esto es un aside</aside>
 	<footer>y esto es el footer: copyright</footer>
 	<P>Y ESTO ES UN PARAGRAF DE EJEMPLO</P>
+	<p>caracteres especiales &lt; &gt; and &amp; &copy; copyright </p>
+	<p>Uso de nbsp Hasta&nbsp;La&nbsp;Victoria;&nbsp;Siempre</p>
+	<p>ejemplo de " para charsets con menos caracteres &quot;</p>
 </HEAD>
 </HTML>
