--- a/Pruebas/structureexample.html
+++ b/Pruebas/structureexample.html
@@ -31,5 +31,8 @@
 	<p>caracteres especiales &lt; &gt; and &amp; &copy; copyright </p>
 	<p>Uso de nbsp Hasta&nbsp;La&nbsp;Victoria;&nbsp;Siempre</p>
 	<p>ejemplo de " para charsets con menos caracteres &quot;</p>
+	<section>
+		<a href="www.indra.es" title=”Link a la web corporative de Indra”>Link a otro lugar</a>	
+	</section>
 </HEAD>
 </HTML>
