--- a/Pruebas/structureexample.html
+++ b/Pruebas/structureexample.html
@@ -32,7 +32,7 @@
 	<p>Uso de nbsp Hasta&nbsp;La&nbsp;Victoria;&nbsp;Siempre</p>
 	<p>ejemplo de " para charsets con menos caracteres &quot;</p>
 	<section>
-		<a href="www.indra.es" title=”Link a la web corporative de Indra”>Link a otro lugar</a>	
+		<a href="index.html" title=”Link a la web corporative de Indra”>Link a otro lugar</a>	
 	</section>
 </HEAD>
 </HTML>
