--- a/Pruebas/structureexample.html
+++ b/Pruebas/structureexample.html
@@ -32,7 +32,7 @@
 	<p>Uso de nbsp Hasta&nbsp;La&nbsp;Victoria;&nbsp;Siempre</p>
 	<p>ejemplo de " para charsets con menos caracteres &quot;</p>
 	<section>
-		<a href="index.html" title=”Pop up de ayuda”>Link a otro lugar</a>	
+		<a href="index.html" title="Pop up de ayuda">Link a otro lugar</a><a href="http://www.index.html" title="Web corporativa de Indra">Acceso a Indra</a>
 	</section>
 </HEAD>
 </HTML>
