--- a/Pruebas/structureexample.html
+++ b/Pruebas/structureexample.html
@@ -5,7 +5,7 @@
 	<TITLE>EJEMPLO DE ESTRUCTURA BÁSICA</TITLE>
 	<header>Header of the page</header>
 	<h1>Main H1 content<nav>www.indra.es</nav></h1>
-	<section>
+	<section id="Section1">
 		<article>articulo 1</article>
 		<article>articulo2</article>
 		<article>articulo3</article>
@@ -34,6 +34,7 @@
 	<section>
 		<a href="index.html" title="Pop up de ayuda">Link a otro lugar</a><a href="http://www.indra.html" title="Web corporativa de Indra"><div>Link a otro lugar</div>Acceso a Indra
 		</a>
+		<a href="#Section1" title="Pop up de ayuda">Link a otro lugar</a>
 	</section>
 </HEAD>
 </HTML>
