--- a/Pruebas/structureexample.html
+++ b/Pruebas/structureexample.html
@@ -4,11 +4,28 @@
 	<META CHARSET='UTF-8'>
 	<TITLE>EJEMPLO DE ESTRUCTURA BÁSICA</TITLE>
 	<header>Header of the page</header>
-	<h1>Main H1 content<nav>www.indra.es</nav></h1>
+	<h1 id="top">Main H1 content<nav>www.indra.es</nav></h1>
 	<section id="Section1">
 		<article>articulo 1</article>
 		<article>articulo2</article>
 		<article>articulo3</article>
+	</section>
+	<section id="Texto">
+		<p>psdapsdpoasdoaspoda
+		asdasdasda
+		dasdasdasda
+		adasdasdasda
+		asdasdasdasdas
+		sdasdasd
+		asd
+		a
+		sd
+		as
+		d
+		sdaksdjkaklsdkajskd
+		ads
+		dasda
+		</p>
 	</section>
 	<section>
 		<article>articulo4</article>
@@ -32,9 +49,11 @@
 	<p>Uso de nbsp Hasta&nbsp;La&nbsp;Victoria;&nbsp;Siempre</p>
 	<p>ejemplo de " para charsets con menos caracteres &quot;</p>
 	<section>
-		<a href="index.html" title="Pop up de ayuda">Link a otro lugar</a><a href="http://www.indra.html" title="Web corporativa de Indra"><div>Link a otro lugar</div>Acceso a Indra
+		<a href="index.html" title="Pop up de ayuda">Link a otro lugar</a>
+		<a href="http://www.indra.es" title="Web corporativa de Indra"><div>Link a otro lugar</div>Acceso a Indra
 		</a>
 		<a href="#Section1" title="Pop up de ayuda">Link a otro lugar</a>
+		<a href="#top">back to the top</a>
 	</section>
 </HEAD>
 </HTML>
