--- a/Pruebas/structureexample.html
+++ b/Pruebas/structureexample.html
@@ -55,5 +55,13 @@
 		<a href="#Section1" title="Pop up de ayuda">Link a otro lugar</a>
 		<a href="#top">back to the top</a>
 	</section>
+	<Section id="Imagenes">
+		<p>
+			<img scr=” https://en.wikipedia.org/wiki/Valencia_CF#/media/File:Valenciacf.svg” width=”640” Height=”480”>
+		</p>
+		<p>
+			<img scr=”Valenciacf.png” width=”640” Height=”480” alt="Pagina con un quot">&quot;imagen del Valencia desde el directorio Local &quot;
+		</p>
+	</Section>
 </HEAD>
 </HTML>
